--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 
     <h2>Comming soon. See our <a href="http://github.com/strimzi">GitHub</a> for more info.</h2>
 
+    <p> Follow the <a href="https://www.redhat.com/mailman/listinfo/strimzi">mailing list</a></p>
+
+    <p> Chat with us on the <a href="https://webchat.freenode.net/?randomnick=1&channels=strimzi&uio=d4">#strimzi channel on Freenode</a></p>
+
   </body>
 </html>
