Added Strimzi image

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
   </head>
   <body bgcolor=white>
 
-    <h1>Strimzi - Apache Kafka on Kubernetes and OpenShift</h1>
+    <div align="center">
 
-    <h2>Comming soon. See our <a href="http://github.com/strimzi">GitHub</a> for more info.</h2>
+      <img src="./images/strimzi.png" />
 
-    <p> Follow the <a href="https://www.redhat.com/mailman/listinfo/strimzi">mailing list</a></p>
+      <h1>Strimzi - Apache Kafka on Kubernetes and OpenShift</h1>
 
-    <p> Chat with us on the <a href="https://webchat.freenode.net/?randomnick=1&channels=strimzi&uio=d4">#strimzi channel on Freenode</a></p>
+      <h2>Comming soon. See our <a href="http://github.com/strimzi">GitHub</a> for more info.</h2>
+
+      <p> Follow the <a href="https://www.redhat.com/mailman/listinfo/strimzi">mailing list</a></p>
+
+      <p> Chat with us on the <a href="https://webchat.freenode.net/?randomnick=1&channels=strimzi&uio=d4">#strimzi channel on Freenode</a></p>
+
+    </div>
 
   </body>
 </html>
