--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       <h1>Strimzi - Apache Kafka on Kubernetes and OpenShift</h1>
 
-      <h2>Comming soon. See our <a href="http://github.com/strimzi">GitHub</a> for more info.</h2>
+      <h2>Coming soon. See our <a href="http://github.com/strimzi">GitHub</a> for more info.</h2>
 
       <p> Follow the <a href="https://www.redhat.com/mailman/listinfo/strimzi">mailing list</a></p>
 
