Add back the Kind quickstart which was lost during the new website upgrade
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/quickstarts/quickstarts-tabs.html
+++ b/quickstarts/quickstarts-tabs.html
@@ -1,15 +1,22 @@
 <div class="tabs post">
-  <!------------------- STARTING MINIKUBE TAB ------------------->
+  <!------------------- MINIKUBE TAB ------------------->
   <input type="radio" name="quickstarts-tab" id="quickstartsTab1" checked="checked">
-  <label for="quickstartsTab1">Getting Starting on Minikube</label>
+  <label for="quickstartsTab1">Minikube</label>
   <div class="tab">
     {% capture tab_one %}{% include_relative minikube.md %}{% endcapture %} {{ tab_one | markdownify }}
   </div>
 
-  <!------------------- STARTING OKD TAB ------------------->
+  <!------------------- OKD TAB ------------------->
   <input type="radio" name="quickstarts-tab" id="quickstartsTab2">
-  <label for="quickstartsTab2">Starting OKD</label>
+  <label for="quickstartsTab2">OKD</label>
   <div class="tab">
     {% capture tab_two %}{% include_relative okd.md %}{% endcapture %} {{ tab_two | markdownify }}
   </div>
+
+    <!------------------- KUBERNETES KIND TAB ------------------->
+    <input type="radio" name="quickstarts-tab" id="quickstartsTab3">
+    <label for="quickstartsTab3">Kubernetes Kind</label>
+    <div class="tab">
+      {% capture tab_three %}{% include_relative kind.md %}{% endcapture %} {{ tab_three | markdownify }}
+    </div>
 </div>
