--- a/connectors/connectors-cards-grid.html
+++ b/connectors/connectors-cards-grid.html
@@ -8,49 +8,50 @@
 
       <div class="tab">
         <div class="grid-wrapper connector-list">
-          {% for item in site.data.connectors.connectors %}
-          <div id="{{ item.id }}" class="card">
-            <div class="title">
-              {{ item.name }}
+          {% for connector in site.data.connectors %}
+            {% assign item = connector[1] %}
+            <div id="{{ item.id }}" class="card">
+              <div class="title">
+                {{ item.name }}
+              </div>
+              <div>
+                <small>{{ item.category }} Connector</small>
+                <i class="fab fa-github"></i>
+              </div>
             </div>
-            <div>
-              <small>{{ item.category }} Connector</small>
-              <i class="fab fa-github"></i>
-            </div>
-          </div>
           {% endfor %}
         </div>
       </div>
 
-      {% for cat in site.data.connectors.categories %}
+      {% for cat in site.data.connectors_tabs %}
 
       <input type="radio" name="connectors-tab" id="{{ cat }}Tab">
       <label for="{{ cat }}Tab">{{ cat }}</label>
 
       <div class="tab">
         <div class="grid-wrapper connector-list">
-          {% for item in site.data.connectors.connectors %}
-          {% if item.category == cat %}
-          <div id="{{ item.id }}" class="card">
-            <div class="title">
-              {{ item.name }}
-            </div>
-            <div>
-              <small>{{ item.category }} Connector</small>
-              <i class="fab fa-github"></i>
-            </div>
-          </div>
-          {% endif %}
+          {% for connector in site.data.connectors %}
+            {% assign item = connector[1] %}
+            {% if item.category == cat %}
+              <div id="{{ item.id }}" class="card">
+                <div class="title">
+                  {{ item.name }}
+                </div>
+                <div>
+                  <small>{{ item.category }} Connector</small>
+                  <i class="fab fa-github"></i>
+                </div>
+              </div>
+            {% endif %}
           {% endfor %}
         </div>
       </div>
       {% endfor %}
-
-
     </div>
     <p>Do you have a connector for Strimzi? <a href="https://slack.cncf.io/" target="_blank">Let us know</a>.</p>
   </div>
-  {% for item in site.data.connectors.connectors %}
+  {% for connector in site.data.connectors %}
+  {% assign item = connector[1] %}
   <div id="content_{{ item.id }}" class="width-6-12 connector-content-wrapper">
     <div class="exit-content">
       <i class="fas fa-times"></i>
@@ -61,20 +62,26 @@
       <p><b>{{ item.category }} Connector</b> | {{ item.description }}</p>
     </div>
     <ul class="connector-links">
-      {% if item.download %}
-      <li><a href="{{item.download}}"><i class="fas fa-arrow-circle-down"></i> Get Connector</a></li>
+      {% if item.source.jarUrlTemplate %}
+        <li><a href="{{item.source.jarUrlTemplate}}"><i class="fas fa-arrow-circle-down"></i> Get Connector</a></li>
       {% endif %}
-      {% if item.source %}
-      <li><a href="{{item.source}}"><i class="fab fa-github"></i> Source Code</a></li>
+      {% if item.source.sourceCodeUrlTemplate %}
+        <li><a href="{{item.source.sourceCodeUrlTemplate}}"><i class="fab fa-github"></i> Source Code</a></li>
       {% endif %}
-      {% if item.documentation %}
-      <li><a href="{{item.documentation}}">View the Documentation <i class="fas fa-external-link-alt"></i></a></li>
+      {% if item.source.documentationUrlTemplate %}
+        <li><a href="{{item.source.documentationUrlTemplate}}">View the Documentation <i class="fas fa-external-link-alt"></i></a></li>
       {% endif %}
-      {% if item.licence %}
-      <li><a href="{{item.licence}}">View the Licence <i class="fas fa-external-link-alt"></i></a></li>
+      {% if item.source.licenseUrlTemplate %}
+        <li><a href="{{item.source.licenseUrlTemplate}}">View the Licence <i class="fas fa-external-link-alt"></i></a></li>
       {% endif %}
     </ul>
-    {% capture foo %}{% include_relative {{ item.id }}.md %}{% endcapture %} {{ foo | markdownify }}
+    {% if item.installationTemplate %}
+      <div>
+        {% capture foo %} {{item.installationTemplate}} {% endcapture %}
+        <h4 class="text-caps">Installation</h4>
+        {{ foo | markdownify }}
+      </div>
+    {% endif %} 
   </div>
   {% endfor %}
 </div>
