Remove OKD from the Quickstarts
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/quickstarts/quickstarts-title-band.html
+++ b/quickstarts/quickstarts-title-band.html
@@ -3,7 +3,7 @@
     <div class="component-slim grid-wrapper">
       <div class="width-12-12">
         <h1>Quick Starts</h1>
-        <h3>Getting up and running with an Apache Kafka cluster on Kubernetes and OKD (the Origin Community Distribution of Kubernetes that powers Red Hat OpenShift) can be very simple, when using the Strimzi project!</h3>
+        <h3>Getting up and running with an Apache Kafka cluster on Kubernetes can be very simple, when using the Strimzi project!</h3>
       </div>
     </div>
   </div>
