Try Jekyll comments
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/quickstarts/quickstarts-tabs.html
+++ b/quickstarts/quickstarts-tabs.html
@@ -7,12 +7,15 @@
   </div>
 
   <!-- OKD has been removed because we do not support 3.11 anymore. We should try to replace it with something else! -->
+  {% comment %}
   <!------------------- OKD TAB ------------------->
   <!--<input type="radio" name="quickstarts-tab" id="quickstartsTab2">
   <label for="quickstartsTab2">OKD</label>
   <div class="tab">
     {% capture tab_two %}{% include_relative okd.md %}{% endcapture %} {{ tab_two | markdownify }}
-  </div>-->
+  </div>
+  {% endcomment %}
+  -->
 
     <!------------------- KUBERNETES KIND TAB ------------------->
     <input type="radio" name="quickstarts-tab" id="quickstartsTab3">
