--- a/quickstarts/quickstarts-tabs.html
+++ b/quickstarts/quickstarts-tabs.html
@@ -13,9 +13,8 @@
   <label for="quickstartsTab2">OKD</label>
   <div class="tab">
     {% capture tab_two %}{% include_relative okd.md %}{% endcapture %} {{ tab_two | markdownify }}
-  </div>
+  </div>-->
   {% endcomment %}
-  -->
 
     <!------------------- KUBERNETES KIND TAB ------------------->
     <input type="radio" name="quickstarts-tab" id="quickstartsTab3">
