--- a/quickstarts/quickstarts-tabs.html
+++ b/quickstarts/quickstarts-tabs.html
@@ -6,12 +6,15 @@
     {% capture tab_one %}{% include_relative minikube.md %}{% endcapture %} {{ tab_one | markdownify }}
   </div>
 
+  <!-- OKD has been removed because we do not support 3.11 anymore. We should try to replace it with something else! -->
+  {% comment %}
   <!------------------- OKD TAB ------------------->
-  <input type="radio" name="quickstarts-tab" id="quickstartsTab2">
+  <!--<input type="radio" name="quickstarts-tab" id="quickstartsTab2">
   <label for="quickstartsTab2">OKD</label>
   <div class="tab">
     {% capture tab_two %}{% include_relative okd.md %}{% endcapture %} {{ tab_two | markdownify }}
-  </div>
+  </div>-->
+  {% endcomment %}
 
     <!------------------- KUBERNETES KIND TAB ------------------->
     <input type="radio" name="quickstarts-tab" id="quickstartsTab3">
